# cs9517_group_project

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
configs/: network_exg.json  networks.json  resunet_parameter.json  traditional_cv.json
model_archs/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package.json
model_archs/src/: App.tsx  index.css  palette.ts  types.ts
model_archs/src/blocks/: AGBlock.tsx  ASPPBlock.tsx  ResBlock.tsx
model_archs/src/components/: Marker.tsx  UShape.tsx
model_archs/src/diagrams/: AG.tsx  ASPP.tsx  Architecture.tsx  Modules.tsx  ResUNet.tsx  UNet.tsx
model_archs/src/utils/: exportPng.ts
notebooks/: demo.ipynb  exploration.ipynb
report/: .gitignore  report.tex
runs/ASPPResUnet/performance/: performance_test.json  performance_train.json  performance_val.json  performance_validation.json
runs/AttentionASPPResUnet/performance/: performance_test.json  performance_train.json  performance_validation.json
runs/LR_RGB/performance/: performance_test.json  performance_validation.json
scripts/: classic_cv.py  compare.py  compare.sh  eval.sh  metrics_evaluate.py  pipeline.py  plot_classifier_comparison.py  plot_rf_feature_comparison.py  requirements.txt  segmentation.py  task2_advanced_seg.py  task2_robustness_eval.py  train.sh  visualizer.py
slide/: slide.html
src/: .gitignore
src/project/: compare.py  evaluate.py  evaluate_ml.py  train.py  train_ml.py
src/utils/: cnn.py  evaluate.py  evaluate_metrics.py  imageio.py  pipeline.py  train.py  types.py  visualization.py
(+563 files in other folders)
